fix card title position on mobile screen

--- a/src/Components/UI/Card/Card.css
+++ b/src/Components/UI/Card/Card.css
@@ -30,31 +30,34 @@
 
 
 #card_title{
-    height: 100%;
+  /* padding: 4px 6px; */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 80%;
 }
 
 .card_content{
-  /* display: none; */
   padding: 7px;
-  /* margin-bottom: 255px; */
   height: 20%;
 }
 
-@media(max-width:900px){
+@media(max-width:1000px){
 
   .card_content{
     /* display: none; */
     padding: 0 5px;
     /* margin-bottom: 255px; */
-    /* height: 0%; */
+    height: 30%;
   }
 
   .card{
-    min-height: 180px;
+    height: 180px;
+    overflow: hidden;
   }
 
   .card img{
-    height: 70%;
+    height: 65%;
     width: 100%;
     
     /* max-height:250px ; */
